opam-version: "2.0"
maintainer: "Nathan Rebours <nathan.p.rebours@gmail.com>"
author: "Nathan Rebours <nathan.p.rebours@gmail.com>"
homepage: "https://github.com/NathanReb/ppx_yojson"
bug-reports: "https://github.com/NathanReb/ppx_yojson/issues"
license: "BSD-2"
dev-repo: "git+https://github.com/cryptosense/ppx_yojson.git"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build}
  "ocaml" {>= "4.04.2"}
  "ounit" {with-test & >= "2.0.0"}
  "ppxlib"
  "yojson" {with-test}
]
