opam-version: "2.0"
maintainer: "Nathan Rebours <nathan.p.rebours@gmail.com>"
author: "Nathan Rebours <nathan.p.rebours@gmail.com>"
homepage: "https://github.com/NathanReb/ppx_yojson"
bug-reports: "https://github.com/NathanReb/ppx_yojson/issues"
license: "BSD-2"
dev-repo: "git+https://github.com/NathanReb/ppx_yojson.git"
doc: "https://nathanreb.github.io/ppx_yojson/doc"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build & >= "1.9.3"}
  "ocaml" {>= "4.04.2"}
  "ounit" {with-test & >= "2.0.0"}
  "ppxlib" {>= "0.3.0"}
  "ppx_deriving" {with-test}
  "yojson" {>= "1.6.0" & with-test}
]
pin-depends: [
  ["ppxlib.dev" "git+https://github.com/ocaml-ppx/ppxlib.git#set-error-style-standalone"]
]
synopsis: "PPX extension for Yojson literals and patterns"
