(executable
  (name pp)
  (modules pp)
  (libraries
    ppx_yojson
    ppxlib
  )
)

(rule
  (targets pp.actual)
  (deps test.ml)
  (action (run ./pp.exe --impl %{deps} -o %{targets}))
)

(alias
  (name runtest)
  (action (diff pp.expected pp.actual))
)

(test
  (name test)
  (modules test)
  (libraries
    yojson
  )
  (preprocess
    (pps
      ppx_yojson
    )
  )
)

(executable
  (name gen_error_dune_rules)
  (modules gen_error_dune_rules)
)

(rule
  (targets dune.inc.gen)
  (deps gen_error_dune_rules.exe)
  (action
    (with-stdout-to
      %{targets}
      (run %{deps})
    ) 
  )
)

(alias
  (name runtest)
  (action (diff dune.inc dune.inc.gen))
)

(include dune.inc)
